<resources>
    <string name="app_name">My First App</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="activity_main_button_login">Fazer Login</string>
    <string name="title_activity_teste">TesteActivity</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="createdAt">Created at:</string>
    <string name="updatedAt">Updated at:</string>
    <string name="id">ID:</string>
    <string name="name_person">Rafael Silva da Costa</string>
    <string name="email_person">rafael-silva-costa@taqtile.com</string>
    <string name="type_person">admin</string>
    <string name="password">Password</string>
    <string name="createButton">Create!</string>
    <string name="password_hint">*********</string>
    
    <string-array name="spinner_choices">
        <item>admin</item>
        <item>manager</item>
    </string-array>
</resources>
