<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myfirstapp.activities.CreateUserActivity"
    android:paddingBottom="10dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:background="@color/background">

    <TextView
        android:id="@+id/activity_create_user_show_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/activity_create_user_name"
        app:layout_constraintBottom_toTopOf="@+id/activity_create_user_spinner"
        android:textSize="@dimen/defaultText"
        android:textColor="@color/textColor"
        android:text="@string/name"/>

    <EditText
        android:id="@+id/activity_create_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/defaultText"
        android:textColor="@color/blackSoft"
        android:hint="@string/name_person"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/activity_create_user_show_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/activity_create_user_show_name"
        app:layout_constraintBottom_toTopOf="@+id/activity_create_user_spinner"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginLeft="@dimen/margin" />

    <Spinner
        android:id="@+id/activity_create_user_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/activity_create_user_name"
        app:layout_constraintBottom_toTopOf="@+id/activity_create_user_show_email"/>

    <TextView
        android:id="@+id/activity_create_user_show_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_create_user_spinner"
        app:layout_constraintRight_toLeftOf="@+id/activity_create_user_email"
        app:layout_constraintBottom_toTopOf="@+id/activity_create_user_show_password"
        android:textSize="@dimen/defaultText"
        android:textColor="@color/textColor"
        android:text="@string/email" />

    <EditText
        android:id="@+id/activity_create_user_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/defaultText"
        android:textColor="@color/blackSoft"
        android:hint="@string/email_person"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/activity_create_user_spinner"
        app:layout_constraintLeft_toRightOf="@+id/activity_create_user_show_email"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/activity_create_user_show_email"
        app:layout_constraintBottom_toTopOf="@+id/activity_create_user_password"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginLeft="@dimen/margin" />

    <TextView
        android:id="@+id/activity_create_user_show_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_create_user_show_email"
        app:layout_constraintRight_toLeftOf="@+id/activity_create_user_password"
        app:layout_constraintBottom_toTopOf="@+id/activity_create_user_button"
        android:textSize="@dimen/defaultText"
        android:textColor="@color/textColor"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/activity_create_user_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/defaultText"
        android:textColor="@color/blackSoft"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/activity_create_user_email"
        app:layout_constraintLeft_toRightOf="@+id/activity_create_user_show_password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/activity_create_user_show_password"
        app:layout_constraintBottom_toTopOf="@+id/activity_create_user_button"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginLeft="@dimen/margin"
        android:hint="@string/password_hint"/>

    <Button
        android:id="@+id/activity_create_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createButton"
        app:layout_constraintTop_toBottomOf="@+id/activity_create_user_show_password"
        app:layout_constraintBottom_toBottomOf="parent" />


</android.support.constraint.ConstraintLayout>
